test/files/neg/t6406-regextract.check
t6406-regextract.scala:4: warning: method unapplySeq in class Regex is deprecated (since 2.11.0): extracting a match result from anything but a CharSequence or Match is deprecated
  List(1) collect { case r(i) => i }
                         ^
error: No warnings can be incurred under -Xfatal-warnings.
one warning found
one error found
